# arm-speech-translator

./: .gitignore  PROJECT_REPORT.md  README.md  gradle.properties  push_models.sh  settings.gradle.kts  validation_log.txt  validation_mem.csv  validation_mem2.csv
app/: build.gradle.kts
app/src/androidTest/java/com/armfinal/translator/: NativePipelineSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/assets/models/fallback/: phrases_en_hi.tsv  phrases_hi_en.tsv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/armfinal/translator/: MainActivity.kt
app/src/main/java/com/armfinal/translator/asr/: VoskEngine.kt
app/src/main/java/com/armfinal/translator/audio/: AudioRecorder.kt  TtsAudioPlayer.kt
app/src/main/java/com/armfinal/translator/core/: MemThermalLogger.kt  Models.kt  PcmUtils.kt  ThermalMonitor.kt  TranslationOrchestrator.kt  TranslationViewModel.kt
app/src/main/java/com/armfinal/translator/nativebridge/: NativeBridge.kt
app/src/main/java/com/armfinal/translator/storage/: AssetModelManager.kt
app/src/main/java/com/armfinal/translator/ui/: TranslationScreen.kt
models/: download_models.sh  export_quantize_nllb.py
